--- a/gb/25/10/30/n14626433.md
+++ b/gb/25/10/30/n14626433.md
@@ -18,38 +18,38 @@
 <p>林宜敬表示，他从科技业转入公部门仅一年多，但长期以来关注环境议题，甚至亲手在南投山坡地种下一万多棵树，“所以我也算是环保人士。”他说，AI 与科技的发展不能只看“聪明”，更要问“是否永续”，“智慧科技若要真正造福人类，终究得回到节能减碳这条路。”</p>
 <p>责任编辑：陈真</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626438.md#1">企管大师推崇神韵 能提升人的心灵境界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626333.md#1">坦尚尼亚货轮走私香烟逾107万包 船上还有冷冻肉133公吨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626309.md#1">诈团逃亡中国被通缉竟运毒来台 警拦下467公斤毒原料</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626253.md#1">陆配钱丽宣传武统 陆委会：已废止台湾身份户籍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626166.md#1">非洲猪瘟边境检疫 入境旅客不分红绿线均查核</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625821.md#1">川习会即将登场 蔡明彦：美国不以台湾议题换取经贸优惠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625796.md#1">中共军委缩编 蔡明彦：须关注习近平决策偏听风险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625798.md#1">淘宝、拼多多限期落地纳管？ 龚明鑫：跨部会讨论</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625761.md#1">中共立案调查沈伯洋 蔡明彦：意在恫吓无实质效果</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652455.md#1">小红书今年涉诈案756件 台警方揭诈骗手法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652505.md#1">未经申请网购医疗器材 高市卫生局1年查获52件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651868.md#1">蓝委吁落实追赃补偿 政院打诈中心：研议成立诈骗补偿基金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651863.md#1">台立院三读 破坏海缆最高7年徒刑、罚1000万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651759.md#1">民航局新一代航空情报服务系统上线 打造航空版Google Map</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651806.md#1">农业部：明年2月申请重返非洲猪瘟非疫区</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651671.md#1">小红书被封禁1年 台政务次长称防诈超前部署</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651700.md#1">曹雅雯星国怪迷违保护令遭羁押 2度现身才被捕凤山警认疏失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651188.md#1">台湾能源黄金路径？ 童子贤倡“核绿共存”守国安</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651181.md#1">诈团渗透国军 60士官兵每月3到5千卖账户</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/23/n2974541.md#1" target="_blank">鲜为人知的马克思之五：自私的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/7/n11437477.md#1" target="_blank">世纪正邪之战 美国总统及各级政要支持法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/6/n11434332.md#1" target="_blank">俞元：与中共“求同存异” 无疑引狼入室</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622152.md#1">科学家濒死7秒经历神奇事件 颠覆人生认知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14621835.md#1">【未解之谜】史前巨石隐藏的真相：硅基文明曾经存在过？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/11/n14614307.md#1">汉朝丞相公孙弘：海边放猪户扭转人生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/1/n13836621.md#1">九九重阳名从何来 称心快意的佳节风俗有哪些？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/12/n14369807.md#1">【品读唐诗】以山水悟禅的题寺诗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625835.md#1">【新闻大家谈】川苗会 美日共享新黄金时代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625863.md#1">【百年真相】红歌始祖李劫夫的悲剧一生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625818.md#1">【直播】川普出席韩国无穷花勋章荣誉颁赠仪式</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624552.md#1">金价跳水?大陆投资人亏本?多方析未来走势</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14624729.md#1">茅台集团换帅 飞天茅台价格跌至近年最低</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14624766.md#1">【中国观察】四中全会硝烟散 现经济死结</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624205.md#1">谢沛恩接受外籍男友求婚 感慨10月爱与泪交织</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624513.md#1">刘亦菲走秀中途珠宝手链脱落 临场反应获赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14625357.md#1">陈坤新片《旁观者》撤档 预售票房不足4万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624560.md#1">刘嘉玲参加综艺节目 梁朝伟罕见隔空放闪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14625293.md#1">范冰冰东京影展抢镜 走红毯一路为影迷签名</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624081.md#1">为什么你最好不要使用旅馆的吹风机？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14624815.md#1">任何人都可能中风 专家教你辨识迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/28/n14624686.md#1">为何南瓜可以长成上千公斤重的巨无霸？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624186.md#1">想太多会让你感到压力很大 如何解脱？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625452.md#1">口渴等于身体脱水吗？ 美国医生释疑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/10/30/n14626433.htm">林宜敬：AI是人造大脑 智慧科技也应走向永续</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626433.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
